--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -371,3 +371,8 @@ footer a:hover {
 
 /* Mobile Portrait Size to Mobile Landscape Size (devices and browsers) */
 @media only screen and (max-width: 479px) { }
+
+.screenshot {
+	display: block;
+    margin: auto
+}
