--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -395,3 +395,7 @@ footer a:hover {
   float:none;
   margin:auto;
 }
+
+#download-app span {
+  background: transparent url(../images/zip-icon.png) 12px 50% no-repeat;
+}
